--- a/pages/16965.html
+++ b/pages/16965.html
@@ -502,7 +502,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#statement">Statement</a><ul><li><a href="#for_fixed_point_spectra">For fixed point spectra</a></li><li><a href="#for_equivariant_homotopy_groups">For equivariant homotopy groups</a></li><li><a href="#for_rational_equivariant_homotopy_theory">For rational equivariant homotopy theory</a></li></ul></li><li><a href="#examples">Examples</a><ul><li><a href="#for_the_equivariant_sphere_spectrum">For the equivariant sphere spectrum</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#statement">Statement</a><ul><li><a href="#OfFixedPointSpectraOfEquivariantSuspensionSpectra">Of fixed point spectra of equivariant suspension spectra</a></li><li><a href="#for_equivariant_homotopy_groups">For equivariant homotopy groups</a></li><li><a href="#for_rational_equivariant_homotopy_theory">For rational equivariant homotopy theory</a></li></ul></li><li><a href="#examples">Examples</a><ul><li><a href="#for_the_equivariant_sphere_spectrum">For the equivariant sphere spectrum</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>The <em>tom Dieck splitting</em> in <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> is a means to decompose certain <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-equivariant constructions into a sequence of the analogous non-equivariant constructions for <a class="existingWikiWord" href="/nlab/show/Weyl+group">Weyl group</a>-<a class="existingWikiWord" href="/nlab/show/homotopy+quotients">homotopy quotients</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a> spaces, for (closed) subgroups.</p>
@@ -527,7 +527,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id="for_fixed_point_spectra">For fixed point spectra</h3>
+<h3 id="OfFixedPointSpectraOfEquivariantSuspensionSpectra">Of fixed point spectra of equivariant suspension spectra</h3>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/fixed+point+spectrum">fixed point spectrum</a> of an <a class="existingWikiWord" href="/nlab/show/equivariant+suspension+spectrum">equivariant suspension spectrum</a> is given by the <a class="existingWikiWord" href="/nlab/show/wedge+sum">wedge sum</a> formula</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>F</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo stretchy="false">)</mo><mo>≃</mo><munder><mo>∨</mo><mrow><mo stretchy="false">[</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo stretchy="false">]</mo></mrow></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi><msub><mo stretchy="false">)</mo> <mo>+</mo></msub><msub><mo>∧</mo> <mrow><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi></mrow></msub><msup><mi>X</mi> <mi>H</mi></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
@@ -650,14 +650,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 05:57:11.
+  Last revised on September 16, 2018 at 07:03:03.
   See the <a href="https://ncatlab.org/nlab/history/tom Dieck splitting" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/tom+Dieck+splitting" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tom+Dieck+splitting/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/tom+Dieck+splitting" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tom+Dieck+splitting" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/tom+Dieck+splitting" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tom+Dieck+splitting/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/tom+Dieck+splitting" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tom+Dieck+splitting" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/tom Dieck splitting/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
