--- a/pages/17551.html
+++ b/pages/17551.html
@@ -502,10 +502,24 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a><ul><li><a href="#ForEquivariantSuspensionSpectra">For equivariant suspension spectra</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#properties">Properties</a><ul><li><a href="#ForEquivariantSuspensionSpectra">For equivariant suspension spectra</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
-<p>In the context of <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> one distinguishes, for a <a class="existingWikiWord" href="/nlab/show/G-spectrum">G-spectrum</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math>, between the plain <em><a class="existingWikiWord" href="/nlab/show/fixed+point+spectrum">fixed point spectrum</a></em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>F</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">F^G(X)</annotation></semantics></math> and its <em>geometric fixed point spectrum</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Phi^G(X)</annotation></semantics></math>.</p>
+<p>In the context of <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> one distinguishes, for a <a class="existingWikiWord" href="/nlab/show/G-spectrum">G-spectrum</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math>, between the plain <em><a class="existingWikiWord" href="/nlab/show/fixed+point+spectrum">fixed point spectrum</a></em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>F</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">F^G(E)</annotation></semantics></math> and its <em>geometric fixed point spectrum</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Phi^G(E)</annotation></semantics></math>.</p>
+
+<p>Here the terminology “geometric” is in the sense of <em><a class="existingWikiWord" href="/nlab/show/point-set+topology">point-set topology</a></em>, as opposed to <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>: If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a (<a class="existingWikiWord" href="/nlab/show/pointed+topological+space">pointed</a>) <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> equipped with a <a class="existingWikiWord" href="/nlab/show/continuous+function">continuous function</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/action">action</a> (a <a class="existingWikiWord" href="/nlab/show/topological+G-space">topological G-space</a>), so that one may consider its <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+suspension+spectrum">equivariant suspension spectrum</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo>∈</mo><mi>G</mi><mi>Spectra</mi></mrow><annotation encoding="application/x-tex">\Sigma^\infty_G X \in G Spectra</annotation></semantics></math>, then the <em>geometric fixed point spectrum</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Phi^G(\Sigma^\infty_G X)</annotation></semantics></math> of the latter is equivalent to the plain <a class="existingWikiWord" href="/nlab/show/suspension+spectrum">suspension spectrum</a> of the plain <a class="existingWikiWord" href="/nlab/show/fixed+point">fixed point</a>-space <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>X</mi> <mi>G</mi></msup></mrow><annotation encoding="application/x-tex">X^G</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>G</mi></msup><mo maxsize="1.2em" minsize="1.2em">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo maxsize="1.2em" minsize="1.2em">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>Σ</mi> <mn>∞</mn></msup><mo maxsize="1.2em" minsize="1.2em">(</mo><msup><mi>X</mi> <mi>G</mi></msup><mo maxsize="1.2em" minsize="1.2em">)</mo><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
+  \Phi^G\big(  \Sigma^\infty_G X \big) 
+     \;\simeq\;   
+  \Sigma^\infty\big( X^G \big)
+  \,,
+
+</annotation></semantics></math></div>
+<p>see the characterization in Prop. <a class="maruku-ref" href="#AbstractCharacterizationOfGeometricFixedPointSpectra"></a>, below.</p>
+
+<p>In general this is different from (not <a class="existingWikiWord" href="/nlab/show/equivalence+in+an+%28infinity%2C1%29-category">equivalent</a> to) the plain (really: <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theoretic</a>) <a class="existingWikiWord" href="/nlab/show/fixed+point+spectrum">fixed point spectrum</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>F</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">F^G(\Sigma^\infty_G X)</annotation></semantics></math>, which is instead the <a class="existingWikiWord" href="/nlab/show/derived+functor">derived functor</a> of forming topological fixed points <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>↦</mo><msup><mi>X</mi> <mi>G</mi></msup></mrow><annotation encoding="application/x-tex">X \mapsto X^G</annotation></semantics></math>, hence which applies this construction only after <a class="existingWikiWord" href="/nlab/show/fibrant+resolution">fibrant resolution</a>; the difference between the two is described by the <em><a class="existingWikiWord" href="/nlab/show/tom+Dieck+splitting+theorem">tom Dieck splitting theorem</a></em>, see Prop. <a class="maruku-ref" href="#AsWedgeSummandInTomDieckSplitting"></a> below.</p>
+
+<h2 id="definition">Definition</h2>
 
 <p>A concrete definition of geometric fixed points of an equivariant spectrum is in (<a href="#Schwede15">Schwede 15, 7.3</a>). A conceptual characterization in terms of <a class="existingWikiWord" href="/nlab/show/localization+of+spectra">localization of spectra</a> is in (<a href="#MathewNaumannNoel15">Mathew-Naumann-Noel 15, def. 6.12</a>).</p>
 
@@ -513,7 +527,12 @@ margin-left: 0em;
 
 <h3 id="ForEquivariantSuspensionSpectra">For equivariant suspension spectra</h3>
 
-<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/topological+G-space">topological G-space</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi></mrow><annotation encoding="application/x-tex">\Sigma^\infty_G X</annotation></semantics></math> its <a class="existingWikiWord" href="/nlab/show/equivariant+suspension+spectrum">equivariant suspension spectrum</a>, its geometric fixed point spectrum is precisely the first summand in</p>
+<div class="num_prop" id="AsWedgeSummandInTomDieckSplitting">
+<h6 id="proposition">Proposition</h6>
+
+<p><strong>(as a <a class="existingWikiWord" href="/nlab/show/wedge+sum">wedge summand</a> in the <a class="existingWikiWord" href="/nlab/show/tom+Dieck+splitting">tom Dieck splitting</a>)</strong></p>
+
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/topological+G-space">topological G-space</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi></mrow><annotation encoding="application/x-tex">\Sigma^\infty_G X</annotation></semantics></math> its <a class="existingWikiWord" href="/nlab/show/equivariant+suspension+spectrum">equivariant suspension spectrum</a>, there is a canonical comparison morphism (…)</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><msup><mi>X</mi> <mi>G</mi></msup><mo stretchy="false">)</mo><mo>↪</mo><msup><mi>F</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   \Phi^G(\Sigma^\infty_G X) 
   \;\simeq\; 
@@ -522,7 +541,7 @@ margin-left: 0em;
   F^G(\Sigma^\infty_G X)
 
 </annotation></semantics></math></div>
-<p>the <a class="existingWikiWord" href="/nlab/show/tom+Dieck+splitting">tom Dieck splitting</a> of the plain <a class="existingWikiWord" href="/nlab/show/fixed+point+spectrum">fixed point spectrum</a></p>
+<p>which exhibits its geometric fixed point spectrum as precisely the first summand in the <a class="existingWikiWord" href="/nlab/show/tom+Dieck+splitting">tom Dieck splitting</a> of the plain <a class="existingWikiWord" href="/nlab/show/fixed+point+spectrum">fixed point spectrum</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>F</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo stretchy="false">)</mo><mo>≃</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><msup><mi>X</mi> <mi>G</mi></msup><mo stretchy="false">)</mo><mo>∨</mo><mrow><mo>(</mo><munder><mo>∨</mo><mfrac linethickness="0"><mrow><mrow><mo stretchy="false">[</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo stretchy="false">]</mo></mrow></mrow><mrow><mrow><mn>1</mn><mo>≠</mo><mi>H</mi><mo>≠</mo><mi>G</mi></mrow></mrow></mfrac></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi><msub><mo stretchy="false">)</mo> <mo>+</mo></msub><msub><mo>∧</mo> <mrow><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi></mrow></msub><msup><mi>X</mi> <mi>H</mi></msup><mo stretchy="false">)</mo><mo>)</mo></mrow><mo>∨</mo><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><mi>E</mi><msub><mi>G</mi> <mo>+</mo></msub><msub><mo>∧</mo> <mi>G</mi></msub><mi>X</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   F^G(\Sigma^\infty_G X)
   \simeq
@@ -536,10 +555,24 @@ margin-left: 0em;
   \Sigma^\infty( E G_+ \wedge_{G} X )
   \,.
 
-</annotation></semantics></math></div>
+</annotation></semantics></math></div></div>
+
 <p>(<a href="#Schwede15">Schwede 15, Example 7.7</a>)</p>
 
-<p>In fact, the construction of geometric fixed point spectra is uniquely characterized by this property and the property of being <a class="existingWikiWord" href="/nlab/show/left+derived+functor">left derived</a> <a class="existingWikiWord" href="/nlab/show/strong+monoidal+functor">strong monoidal</a> and preserving <a class="existingWikiWord" href="/nlab/show/homotopy+colimits">homotopy colimits</a>.</p>
+<p>In fact:</p>
+
+<div class="num_prop" id="AbstractCharacterizationOfGeometricFixedPointSpectra">
+<h6 id="proposition_2">Proposition</h6>
+
+<p>The construction of geometric fixed point spectra is essentially uniquely characterized by the property</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>G</mi></msup><mo maxsize="1.2em" minsize="1.2em">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo maxsize="1.2em" minsize="1.2em">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>Σ</mi> <mn>∞</mn></msup><mo maxsize="1.2em" minsize="1.2em">(</mo><msup><mi>X</mi> <mi>G</mi></msup><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">
+  \Phi^G\big(  \Sigma^\infty_G X \big) 
+     \;\simeq\;   
+  \Sigma^\infty\big( X^G \big)
+
+</annotation></semantics></math></div>
+<p>and the property of being <a class="existingWikiWord" href="/nlab/show/left+derived+functor">left derived</a> <a class="existingWikiWord" href="/nlab/show/strong+monoidal+functor">strong monoidal</a> and preserving <a class="existingWikiWord" href="/nlab/show/homotopy+colimits">homotopy colimits</a>.</p>
+</div>
 
 <p>(<a href="#Blumberg17">Blumberg 17, around Def. 2.5.16</a>)</p>
 
@@ -580,14 +613,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 06:49:41.
+  Last revised on September 16, 2018 at 09:50:07.
   See the <a href="https://ncatlab.org/nlab/history/geometric fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric fixed point spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
