--- a/pages/17419.html
+++ b/pages/17419.html
@@ -527,7 +527,7 @@ margin-left: 0em;
 
 <ul>
 <li id="Kowalski13">
-<p>E. Kowalski, around p. 41 of <em>Representation theory</em>, 2013 (pdflass=‘existingWikiWord’ href=‘/nlab/files/KowalskiReptheory2013.pdf’ title=‘’&gt;KowalskiReptheory2013.pdf&lt;/a&gt;)</p>
+<p>E. Kowalski, around p. 41 of <em>Representation theory</em>, 2013 (<a class="existingWikiWord" href="/nlab/files/KowalskiReptheory2013.pdf" title="">KowalskiReptheory2013.pdf</a>)</p>
 </li>
 
 <li id="Fein67">
@@ -544,14 +544,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 15, 2018 at 10:48:26.
+  Last revised on September 16, 2018 at 10:14:07.
   See the <a href="https://ncatlab.org/nlab/history/direct product group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/direct+product+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/direct+product+group/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/direct+product+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/direct+product+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/direct+product+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/direct+product+group/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/direct+product+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/direct+product+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/direct product group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
