--- a/pages/7673.html
+++ b/pages/7673.html
@@ -1044,6 +1044,10 @@ margin-left: 0em;
 <li id="Joyal17">
 <p><a class="existingWikiWord" href="/nlab/show/Andr%C3%A9+Joyal">André Joyal</a>, <em>Notes on Clans and Tribes</em> (<a href="https://arxiv.org/abs/1710.10238">arXiv:1710.10238</a>)</p>
 </li>
+
+<li>
+<p>See also <span class="newWikiWord">clan<a href="/nlab/new/clan">?</a></span>.</p>
+</li>
 </ul>
 
 <p>Further discussion of contextual categories is in</p>
@@ -1097,14 +1101,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 15, 2018 at 13:35:09.
+  Last revised on September 17, 2018 at 01:20:53.
   See the <a href="https://ncatlab.org/nlab/history/categorical model of dependent types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/34" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(34 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/35" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(35 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/categorical model of dependent types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
