--- a/pages/16971.html
+++ b/pages/16971.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -539,11 +539,19 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/geometric+fixed+point+spectrum">geometric fixed point spectrum</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/fixed+point+space">fixed point space</a></p>
 </li>
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy+fixed+points">homotopy fixed points</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/geometric+fixed+point+spectrum">geometric fixed point spectrum</a></p>
+</li>
+
+<li>
+<p><span class="newWikiWord">categorical fixed point spectrum<a href="/nlab/new/categorical+fixed+point+spectrum">?</a></span></p>
 </li>
 
 <li>
@@ -562,14 +570,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 09:38:03.
+  Last revised on September 17, 2018 at 06:39:19.
   See the <a href="https://ncatlab.org/nlab/history/fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fixed+point+spectrum/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fixed+point+spectrum/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fixed point spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
