--- a/pages/16965.html
+++ b/pages/16965.html
@@ -507,7 +507,7 @@ margin-left: 0em;
 
 <p>The objects of <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> – genuine <a class="existingWikiWord" href="/nlab/show/G-spectra">G-spectra</a> – are very rich: Already the <a class="existingWikiWord" href="/nlab/show/fixed+point+spectra">fixed point spectra</a> of <a class="existingWikiWord" href="/nlab/show/equivariant+suspension+spectra">equivariant suspension spectra</a> contain considerably more information than just the <a class="existingWikiWord" href="/nlab/show/suspension+spectra">suspension spectra</a> of the plain underlying <a class="existingWikiWord" href="/nlab/show/fixed+point+spaces">fixed point spaces</a> – the latter are just the <em><a class="existingWikiWord" href="/nlab/show/geometric+fixed+point+spectra">geometric fixed point spectra</a>.</em></p>
 
-<p>The <em>tom Dieck splitting</em> (<a href="#tomDieck75">tom Dieck 75</a>) gives an explicit description of all the <a class="existingWikiWord" href="/nlab/show/wedge+sum">wedge summands</a> appearing in <a class="existingWikiWord" href="/nlab/show/fixed+point+spectra">fixed point spectra</a> of <a class="existingWikiWord" href="/nlab/show/equivariant+suspension+spectra">equivariant suspension spectra</a>. These wedge sums start out with the <a class="existingWikiWord" href="/nlab/show/geometric+fixed+point+spectra">geometric fixed point spectra</a> and then have one summand for each <a class="existingWikiWord" href="/nlab/show/conjugacy+class">conjugacy class</a> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">H \subset G</annotation></semantics></math>, given by the plain <a class="existingWikiWord" href="/nlab/show/suspension+spectra">suspension spectra</a> of the <a class="existingWikiWord" href="/nlab/show/homotopy+quotient">homotopy quotient</a> of the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+point+spaces">fixed point spaces</a> by the corresponding <a class="existingWikiWord" href="/nlab/show/Weyl+group">Weyl group</a>-<a class="existingWikiWord" href="/nlab/show/action">action</a>.</p>
+<p>The <em>tom Dieck splitting</em> (<a href="#tomDieck75">tom Dieck 75</a>, <a href="#LewisMaySteinberger86">Lewis-May-Steinberger 86, V.11</a>) gives an explicit description of all the <a class="existingWikiWord" href="/nlab/show/wedge+sum">wedge summands</a> appearing in <a class="existingWikiWord" href="/nlab/show/fixed+point+spectra">fixed point spectra</a> of <a class="existingWikiWord" href="/nlab/show/equivariant+suspension+spectra">equivariant suspension spectra</a>. These wedge sums start out with the <a class="existingWikiWord" href="/nlab/show/geometric+fixed+point+spectra">geometric fixed point spectra</a> and then have one summand for each <a class="existingWikiWord" href="/nlab/show/conjugacy+class">conjugacy class</a> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">H \subset G</annotation></semantics></math>, given by the plain <a class="existingWikiWord" href="/nlab/show/suspension+spectra">suspension spectra</a> of the <a class="existingWikiWord" href="/nlab/show/homotopy+quotient">homotopy quotient</a> of the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+point+spaces">fixed point spaces</a> by the corresponding <a class="existingWikiWord" href="/nlab/show/Weyl+group">Weyl group</a>-<a class="existingWikiWord" href="/nlab/show/action">action</a>.</p>
 
 <p>Induced from this <a class="existingWikiWord" href="/nlab/show/wedge+sum">wedge sum</a> splitting formula for the spectra themselves is a corresponding <a class="existingWikiWord" href="/nlab/show/direct+sum">direct sum</a>-formula of the <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+groups">equivariant stable homotopy groups</a> in terms of plain <a class="existingWikiWord" href="/nlab/show/stable+homotopy+groups">stable homotopy groups</a>.</p>
 
@@ -635,13 +635,25 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
-<p>The theorem is due to</p>
+<p>The theorem at the level of <a class="existingWikiWord" href="/nlab/show/stable+homotopy+groups">stable homotopy groups</a> is due to</p>
 
 <ul>
 <li id="tomDieck75"><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, Satz 2 of <em>Orbittypen und ̈aquivariante Homologie. II.</em>, Arch. Math. (Basel) 26 (1975), no. 6, 650–662</li>
 </ul>
 
-<p>Reviews include</p>
+<p>The refinement to <a class="existingWikiWord" href="/nlab/show/spectra">spectra</a> is achieved in section V.11 of</p>
+
+<ul>
+<li id="LewisMaySteinberger86"><a class="existingWikiWord" href="/nlab/show/L.+Gaunce+Lewis">L. Gaunce Lewis</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, and Mark Steinberger (with contributions by J.E. McClure), <em>Equivariant stable homotopy theory</em>, Springer Lecture Notes in Mathematics Vol.1213. 1986 (<a href="http://www.math.uchicago.edu/~may/BOOKS/equi.pdf">pdf</a>)</li>
+</ul>
+
+<p>An alternative proof in the context of <a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a> is given in</p>
+
+<ul>
+<li id="GuillouMay12"><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, section 6.2 of <em>Permutative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-categories in equivariant infinite loop space theory</em> (<a href="http://arxiv.org/abs/1207.3459">arXiv:1207.3459</a>)</li>
+</ul>
+
+<p>Detailed lecture notes are in</p>
 
 <ul>
 <li id="Schwede15">
@@ -653,16 +665,10 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>See also</p>
+<p>A brief mentioning appears in this survey of <a class="existingWikiWord" href="/nlab/show/rational+equivariant+stable+homotopy+theory">rational equivariant stable homotopy theory</a>:</p>
 
 <ul>
-<li id="Greenlees">
-<p><a class="existingWikiWord" href="/nlab/show/John+Greenlees">John Greenlees</a>, <em>Triangulated categories of rational equivariant cohomology theories</em> (<a href="http://www.greenlees.staff.shef.ac.uk/preprints/thicksurvey.pdf">pdf</a>)</p>
-</li>
-
-<li id="GuillouMay12">
-<p><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Permutative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-categories in equivariant infinite loop space theory</em> (<a href="http://arxiv.org/abs/1207.3459">arXiv:1207.3459</a>)</p>
-</li>
+<li id="Greenlees"><a class="existingWikiWord" href="/nlab/show/John+Greenlees">John Greenlees</a>, p. 3 of <em>Triangulated categories of rational equivariant cohomology theories</em> (<a href="https://pdfs.semanticscholar.org/eda8/ee6effb2ae487085a2e7615a4a7e1964c493.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/GreenleesRationalEquivariant.pdf" title="pdf">pdf</a>)</li>
 </ul>
 </body></html>
 
@@ -670,14 +676,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 17, 2018 at 06:59:38.
+  Last revised on September 17, 2018 at 08:38:24.
   See the <a href="https://ncatlab.org/nlab/history/tom Dieck splitting" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/tom+Dieck+splitting" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tom+Dieck+splitting/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/tom+Dieck+splitting" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tom+Dieck+splitting" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/tom+Dieck+splitting" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tom+Dieck+splitting/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/tom+Dieck+splitting" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tom+Dieck+splitting" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/tom Dieck splitting/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
