--- a/pages/8003.html
+++ b/pages/8003.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3976/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3976/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -904,20 +904,26 @@ margin-left: 0em;
 <ul>
 <li id="BohmannOsorno14"><a class="existingWikiWord" href="/nlab/show/Anna+Marie+Bohmann">Anna Marie Bohmann</a>, <a class="existingWikiWord" href="/nlab/show/Ang%C3%A9lica+Osorno">Angélica Osorno</a>, <em>Constructing equivariant spectra via categorical Mackey functors</em>, Algebraic &amp; Geometric Topology 15.1 (2015): 537-563 (<a href="http://arxiv.org/abs/1405.6126">arXiv:1405.6126</a>)</li>
 </ul>
+
+<p>Genralization to <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> and <a class="existingWikiWord" href="/nlab/show/G-spectra">G-spectra</a> is discussed in</p>
+
+<ul>
+<li id="GuillouMay12"><a class="existingWikiWord" href="/nlab/show/Bert+Guillou">Bert Guillou</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, around section 4.4 of <em>Permutative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-categories in equivariant infinite loop space theory</em> (<a href="http://arxiv.org/abs/1207.3459">arXiv:1207.3459</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 04:06:44.
+  Last revised on September 17, 2018 at 08:57:03.
   See the <a href="https://ncatlab.org/nlab/history/K-theory of a permutative category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K-theory of a permutative category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
