--- a/pages/19692.html
+++ b/pages/19692.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9001/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9001/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -312,20 +312,22 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <p>The <strong>exterior</strong> of a <a class="existingWikiWord" href="/nlab/show/subset">subset</a> of a <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> is the <a class="existingWikiWord" href="/nlab/show/interior">interior</a> of its <a class="existingWikiWord" href="/nlab/show/complement">complement</a>, or equivalently the complement of its <a class="existingWikiWord" href="/nlab/show/topological+closure">closure</a>. In more elementary terms, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>∈</mo><mi>Ext</mi><mi>A</mi></mrow><annotation encoding="application/x-tex">x \in Ext A</annotation></semantics></math> iff there is some <a class="existingWikiWord" href="/nlab/show/neighbourhood">neighbourhood</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> that is <a class="existingWikiWord" href="/nlab/show/disjoint+subsets">disjoint</a> from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math>.</p>
+
+<p>The exterior operation applied to <a class="existingWikiWord" href="/nlab/show/open+sets">open sets</a>, i.e., to a <a class="existingWikiWord" href="/nlab/show/topology">topology</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒪</mi></mrow><annotation encoding="application/x-tex">\mathcal{O}</annotation></semantics></math> of a space, coincides with the <a class="existingWikiWord" href="/nlab/show/negation">negation</a> operation <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>¬</mo><mo>:</mo><mi>𝒪</mi><mo>→</mo><mi>𝒪</mi></mrow><annotation encoding="application/x-tex">\neg: \mathcal{O} \to \mathcal{O}</annotation></semantics></math> when we view <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒪</mi></mrow><annotation encoding="application/x-tex">\mathcal{O}</annotation></semantics></math> as a <a class="existingWikiWord" href="/nlab/show/frame">frame</a> or <a class="existingWikiWord" href="/nlab/show/Heyting+algebra">Heyting algebra</a>. See also <a class="existingWikiWord" href="/nlab/show/regular+open+set">regular open set</a>.</p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on September 17, 2018 at 04:01:13.
+  Last revised on September 17, 2018 at 10:27:56.
   See the <a href="https://ncatlab.org/nlab/history/exterior" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/exterior" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/exterior" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exterior/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/exterior" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exterior" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/exterior/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
