--- a/pages/17551.html
+++ b/pages/17551.html
@@ -599,7 +599,7 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>(<a href="#LewisMaySteinberger86">Lewis-May-Steinberger 86, II.9</a>, <a href="#Lewis00">Lewis 00, Scholium 10.2</a>)</p>
+<p>(<a href="#LewisMaySteinberger86">Lewis-May-Steinberger 86, II.9, cor. 9.9</a>, <a href="#Lewis00">Lewis 00, Scholium 10.2</a>)</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -654,14 +654,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 18, 2018 at 04:51:43.
+  Last revised on September 18, 2018 at 05:26:08.
   See the <a href="https://ncatlab.org/nlab/history/geometric fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric fixed point spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
