--- a/pages/9018.html
+++ b/pages/9018.html
@@ -1286,7 +1286,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#G2Manifolds">Details</a><ul><li><a href="#VacuumSolutionsAndTorsion">Vacuum solutions</a></li><li><a href="#ComplexifiedModuli">Complexified moduli space</a></li><li><a href="#EnhancedGaugeGroups">Nonabelian gauge groups and chiral fermions at orbifold singularities</a></li><li><a href="#TheCField">Solutions with non-vanishing <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>-field strength</a></li><li><a href="#singularities">Singularities</a></li><li><a href="#relation_to_intersecting_dbrane_models">Relation to intersecting D-brane models</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a><ul><li><a href="#general">General</a></li><li><a href="#ReferencesPhenomenology">Phenomenology</a></li></ul></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#G2Manifolds">Details</a><ul><li><a href="#VacuumSolutionsAndTorsion">Vacuum solutions</a></li><li><a href="#ComplexifiedModuli">Complexified moduli space</a></li><li><a href="#EnhancedGaugeGroups">Nonabelian gauge groups and chiral fermions at orbifold singularities</a></li><li><a href="#TheCField">Solutions with non-vanishing <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>-field strength</a></li><li><a href="#confinement">Confinement?</a></li><li><a href="#relation_to_intersecting_dbrane_models">Relation to intersecting D-brane models</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a><ul><li><a href="#general">General</a></li><li><a href="#ReferencesPhenomenology">Phenomenology</a></li></ul></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/Kaluza-Klein+reduction">Kaluza-Klein reduction</a> of <a class="existingWikiWord" href="/nlab/show/11-dimensional+supergravity">11-dimensional supergravity</a> on <a class="existingWikiWord" href="/nlab/show/G2+manifolds">G2 manifolds</a> (notably <a class="existingWikiWord" href="/nlab/show/Freund-Rubin+compactifications">Freund-Rubin compactifications</a> and variants) yields an <a class="existingWikiWord" href="/nlab/show/effective+field+theory">effective</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">N=1</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/4-dimensional+supergravity">4-dimensional supergravity</a> with <a class="existingWikiWord" href="/nlab/show/gauge+fields">gauge fields</a> (arising from the KK-modes of the <a class="existingWikiWord" href="/nlab/show/graviton">graviton</a>) and charged <a class="existingWikiWord" href="/nlab/show/fermions">fermions</a> (arising from the KK-models of the <a class="existingWikiWord" href="/nlab/show/gravitino">gravitino</a>). This construction is thought to lift to <a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a> as the analog of the KK-compactification of <a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a> on <a class="existingWikiWord" href="/nlab/show/Calabi-Yau+manifolds">Calabi-Yau manifolds</a> (see at <em><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></em>), and of <a class="existingWikiWord" href="/nlab/show/F-theory+on+CY4-manifolds">F-theory on CY4-manifolds</a>.</p>
@@ -1399,9 +1399,54 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo>=</mo><msubsup><mi>e</mi> <mn>7</mn> <mo>*</mo></msubsup><msub><mi>ϕ</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">\phi = e_7^\ast \phi_3</annotation></semantics></math> the pullback of the <a class="existingWikiWord" href="/nlab/show/associative+3-form">associative 3-form</a> (<a href="#BilalDerendingerSfetos">BSS 02, (5.5)</a>), saying that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo>∝</mo><mo>⋆</mo><msub><mi>F</mi> <mn>7</mn></msub></mrow><annotation encoding="application/x-tex">\phi \propto \star F_7</annotation></semantics></math> exhibits <a href="G2+manifold#WeakG2Holonomy">weak G2-holonomy</a> with weakness parameter given by the component of the <a class="existingWikiWord" href="/nlab/show/C-field">C-field</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">X_4</annotation></semantics></math>.</p>
 
-<h3 id="singularities">Singularities</h3>
+<h3 id="confinement">Confinement?</h3>
 
-<p>For realistic <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> content after <a class="existingWikiWord" href="/nlab/show/Kaluza-Klein+compactification">Kaluza-Klein compactification</a> one needs to consider not smooth (weak) <a class="existingWikiWord" href="/nlab/show/G2-manifolds">G2-manifolds</a> but <a class="existingWikiWord" href="/nlab/show/conical+singularities">conical singularities</a> and <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> of these. see the first page of (<a href="#AcharyaDenefHofmanLambert">Acharya-Denef-Hofman-Lambert</a>) for discussion of <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenology</a> for such orbifold <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math> models and further pointers and see (<a href="#Acharya98">Acharya 98</a>) for general discussion of orbifolds with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-structure.</p>
+<p>An idea for a strategy towards a proof of <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> in <a class="existingWikiWord" href="/nlab/show/N%3D1+D%3D4+super+Yang-Mills+theory">N=1 D=4 super Yang-Mills theory</a> via two different but conjecturally equivalent realizations as <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> has been given in <a href="#AtiyahWitten01">Atiyah-Witten 01, section 6</a>, review is in <a href="#AcharyaGukov04">Acharya-Gukov 04, section 5.3</a>.</p>
+
+<p>The idea here is to consider a <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a> of <a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a> on <a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> which are <a class="existingWikiWord" href="/nlab/show/G2-manifolds">G2-manifolds</a> that locally around a special point are of the form</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy="false">/</mo><mi>Γ</mi><mo maxsize="1.2em" minsize="1.2em">)</mo><mo>×</mo><mi>Cone</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo maxsize="1.2em" minsize="1.2em">)</mo><mphantom><mi>AA</mi></mphantom><mtext>or</mtext><mphantom><mi>AA</mi></mphantom><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><msup><mi>S</mi> <mn>3</mn></msup><mo>×</mo><mi>Cone</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy="false">/</mo><mi>Γ</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">
+  X_{1,\Gamma} 
+  \;\coloneqq\;
+  \big( S^3 / \Gamma \big) \times Cone\big(S^3\big)
+  \phantom{AA}
+  \text{or}
+  \phantom{AA}
+  X_{2,\Gamma} 
+  \;\coloneqq\;
+  S^3 \times Cone\big(S^3/\Gamma\big)
+
+</annotation></semantics></math></div>
+<p>where</p>
+
+<ul>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi></mrow><annotation encoding="application/x-tex">\Gamma</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/finite+subgroup+of+SU%282%29">finite subgroup of SU(2)</a> that <a class="existingWikiWord" href="/nlab/show/action">acts</a> canonically by left-multiplication on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup><mo>≃</mo></mrow><annotation encoding="application/x-tex">S^3 \simeq </annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/SU%282%29">SU(2)</a>;</p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Cone</mi><mo stretchy="false">(</mo><mi>⋯</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Cone(\cdots)</annotation></semantics></math> denotes the <a class="existingWikiWord" href="/nlab/show/metric+cone">metric cone</a> construction.</p>
+</li>
+</ul>
+
+<p>This means that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a>, but <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{2,\Gamma}</annotation></semantics></math>, as soon as <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi></mrow><annotation encoding="application/x-tex">\Gamma</annotation></semantics></math> is not the <a class="existingWikiWord" href="/nlab/show/trivial+group">trivial group</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>≠</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\Gamma \neq 1</annotation></semantics></math>, is an <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> with an <a class="existingWikiWord" href="/nlab/show/ADE+singularity">ADE singularity</a>.</p>
+
+<p>Now the lore of <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> predicts that <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a></p>
+
+<ol>
+<li>
+<p>on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math> yields a 4d theory without massless fields (since there are no massless modes on the <a class="existingWikiWord" href="/nlab/show/covering+space">covering space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">S^3</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math>)</p>
+</li>
+
+<li>
+<p>on the <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{2,\Gamma}</annotation></semantics></math> yields <a class="existingWikiWord" href="/nlab/show/non-abelian+group">non-abelian</a> <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> in 4d coupled to <a class="existingWikiWord" href="/nlab/show/chiral+fermions">chiral fermions</a>.</p>
+</li>
+</ol>
+
+<p>So in the first case a <a class="existingWikiWord" href="/nlab/show/mass+gap">mass gap</a> is manifest, while non-abelian gauge theory is not visible, while in the second case it is the other way around.</p>
+
+<p>But is there were an argument that <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> is in fact equivalent for compactification both on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math> and on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{2,\Gamma}</annotation></semantics></math>. To the extent that this is true, it looks like an argument that could demonstrate confinement in non-abelian 4d gauge theory.</p>
+
+<p>This approach is suggested in <a href="#AtiyahWitten01">Atiyah-Witten 01, pages 84-85</a>. An argument that this equivalence is indeed the case is then provided in sections 6.1-6.4.</p>
 
 <h3 id="relation_to_intersecting_dbrane_models">Relation to intersecting D-brane models</h3>
 
@@ -1744,14 +1789,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 01:36:55.
+  Last revised on September 20, 2018 at 02:50:09.
   See the <a href="https://ncatlab.org/nlab/history/M-theory on G2-manifolds" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/M-theory+on+G2-manifolds" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-theory+on+G2-manifolds/69" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(69 revisions)</span> | <a href="/nlab/show/diff/M-theory+on+G2-manifolds" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-theory+on+G2-manifolds" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/M-theory+on+G2-manifolds" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-theory+on+G2-manifolds/70" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(70 revisions)</span> | <a href="/nlab/show/diff/M-theory+on+G2-manifolds" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-theory+on+G2-manifolds" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/M-theory on G2-manifolds/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
