--- a/pages/9687.html
+++ b/pages/9687.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4900/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4900/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1062,7 +1062,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#possible_realizations">Possible realizations</a><ul><li><a href="#in__super_yangmills_theory_via_seibergwittern_theory">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathcal{N}=2</annotation></semantics></math> super Yang-Mills theory via Seiberg-Wittern theory</a></li><li><a href="#in__super_yangmills_theory_via_mtheory_on_manifolds">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\mathcal{N} = 1</annotation></semantics></math> super Yang-Mills theory via M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a><ul><li><a href="#ReferencesInYangMillsTheory">In Yang-Mills theory</a><ul><li><a href="#general">General</a></li><li><a href="#ViaMonopoleCondensation">Via monopole condensation</a></li></ul></li><li><a href="#interacting_field_vacuum">Interacting field vacuum</a></li><li><a href="#ReferencesInSuperYangMillsTheory">In super-Yang-Mills theory</a></li><li><a href="#under_the_adscft_correspondence">Under the AdS/CFT correspondence</a></li><li><a href="#in_mtheory_on_manifolds">In M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li></ul></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#possible_realizations">Possible realizations</a><ul><li><a href="#in__super_yangmills_theory_via_seibergwittern_theory">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathcal{N}=2</annotation></semantics></math> super Yang-Mills theory via Seiberg-Wittern theory</a></li><li><a href="#ForN1SYMViaMTheoryOnG2Manifolds">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\mathcal{N} = 1</annotation></semantics></math> super Yang-Mills theory via M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a><ul><li><a href="#ReferencesInYangMillsTheory">In Yang-Mills theory</a><ul><li><a href="#general">General</a></li><li><a href="#ViaMonopoleCondensation">Via monopole condensation</a></li></ul></li><li><a href="#interacting_field_vacuum">Interacting field vacuum</a></li><li><a href="#ReferencesInSuperYangMillsTheory">In super-Yang-Mills theory</a></li><li><a href="#under_the_adscft_correspondence">Under the AdS/CFT correspondence</a></li><li><a href="#in_mtheory_on_manifolds">In M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li></ul></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>Confinement (e.g <a href="#Espiru94">Espiru 94</a>) is the (expected) phenomenon in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>/<a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> that <a class="existingWikiWord" href="/nlab/show/quark">quark</a>-excitations must form <a class="existingWikiWord" href="/nlab/show/bound+state">bound states</a> which are neutral under the color charge – such as the <a class="existingWikiWord" href="/nlab/show/hadron">hadrons</a> (<a class="existingWikiWord" href="/nlab/show/proton">protons</a>, <a class="existingWikiWord" href="/nlab/show/neutron">neutrons</a>) and <a class="existingWikiWord" href="/nlab/show/meson">mesons</a>.</p>
@@ -1075,9 +1075,54 @@ margin-left: 0em;
 
 <p>While confinement in plain <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> is still waiting for mathematical formalization and <a class="existingWikiWord" href="/nlab/show/proof">proof</a> (see <a href="#JaffeWitten">Jaffe-Witten</a>), there is a variant of <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> with more <a class="existingWikiWord" href="/nlab/show/symmetry">symmetry</a> where the phenomenon has been demonstrated, namely in <a class="existingWikiWord" href="/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory">N=2 D=4 super Yang-Mills theory</a> (<a href="#SeibergWitten94">Seiberg-Witten 94</a>).</p>
 
-<h3 id="in__super_yangmills_theory_via_mtheory_on_manifolds">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\mathcal{N} = 1</annotation></semantics></math> super Yang-Mills theory via M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</h3>
+<h3 id="ForN1SYMViaMTheoryOnG2Manifolds">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\mathcal{N} = 1</annotation></semantics></math> super Yang-Mills theory via M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</h3>
 
-<p>An idea for a proof strategy for confinement in <a class="existingWikiWord" href="/nlab/show/N%3D1+D%3D4+super+Yang-Mills+theory">N=1 D=4 super Yang-Mills theory</a> via two different but conjecturally equivalent realizations as <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> has been given in <a href="#AtiyahWitten01">Atiyah-Witten 01</a>, review is in <a href="#AcharyaGukov04">Acharya-Gukov 04, section 5.3</a>.</p>
+<p>An idea for a strategy towards a proof of confinement in <a class="existingWikiWord" href="/nlab/show/N%3D1+D%3D4+super+Yang-Mills+theory">N=1 D=4 super Yang-Mills theory</a> via two different but conjecturally equivalent realizations as <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> has been given in <a href="#AtiyahWitten01">Atiyah-Witten 01, section 6</a>, review is in <a href="#AcharyaGukov04">Acharya-Gukov 04, section 5.3</a>.</p>
+
+<p>The idea here is to consider a <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a> of <a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a> on <a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> which are <a class="existingWikiWord" href="/nlab/show/G2-manifolds">G2-manifolds</a> that locally around a special point are of the form</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy="false">/</mo><mi>Γ</mi><mo maxsize="1.2em" minsize="1.2em">)</mo><mo>×</mo><mi>Cone</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo maxsize="1.2em" minsize="1.2em">)</mo><mphantom><mi>AA</mi></mphantom><mtext>or</mtext><mphantom><mi>AA</mi></mphantom><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><msup><mi>S</mi> <mn>3</mn></msup><mo>×</mo><mi>Cone</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><msup><mi>S</mi> <mn>3</mn></msup><mo stretchy="false">/</mo><mi>Γ</mi><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">
+  X_{1,\Gamma} 
+  \;\coloneqq\;
+  \big( S^3 / \Gamma \big) \times Cone\big(S^3\big)
+  \phantom{AA}
+  \text{or}
+  \phantom{AA}
+  X_{2,\Gamma} 
+  \;\coloneqq\;
+  S^3 \times Cone\big(S^3/\Gamma\big)
+
+</annotation></semantics></math></div>
+<p>where</p>
+
+<ul>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi></mrow><annotation encoding="application/x-tex">\Gamma</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/finite+subgroup+of+SU%282%29">finite subgroup of SU(2)</a> that <a class="existingWikiWord" href="/nlab/show/action">acts</a> canonically by left-multiplication on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup><mo>≃</mo></mrow><annotation encoding="application/x-tex">S^3 \simeq </annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/SU%282%29">SU(2)</a>;</p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Cone</mi><mo stretchy="false">(</mo><mi>⋯</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Cone(\cdots)</annotation></semantics></math> denotes the <a class="existingWikiWord" href="/nlab/show/metric+cone">metric cone</a> construction.</p>
+</li>
+</ul>
+
+<p>This means that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a>, but <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{2,\Gamma}</annotation></semantics></math>, as soon as <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi></mrow><annotation encoding="application/x-tex">\Gamma</annotation></semantics></math> is not the <a class="existingWikiWord" href="/nlab/show/trivial+group">trivial group</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>≠</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\Gamma \neq 1</annotation></semantics></math>, is an <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> with an <a class="existingWikiWord" href="/nlab/show/ADE+singularity">ADE singularity</a>.</p>
+
+<p>Now the lore of <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> predicts that <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a></p>
+
+<ol>
+<li>
+<p>on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math> yields a 4d theory without massless fields (since there are no massless modes on the <a class="existingWikiWord" href="/nlab/show/covering+space">covering space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">S^3</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math>)</p>
+</li>
+
+<li>
+<p>on the <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{2,\Gamma}</annotation></semantics></math> yields <a class="existingWikiWord" href="/nlab/show/non-abelian+group">non-abelian</a> <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> in 4d coupled to <a class="existingWikiWord" href="/nlab/show/chiral+fermions">chiral fermions</a>.</p>
+</li>
+</ol>
+
+<p>So in the first case a <a class="existingWikiWord" href="/nlab/show/mass+gap">mass gap</a> is manifest, while non-abelian gauge theory is not visible, while in the second case it is the other way around.</p>
+
+<p>But is there were an argument that <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> is in fact equivalent for compactification both on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>1</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{1,\Gamma}</annotation></semantics></math> and on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mrow><mn>2</mn><mo>,</mo><mi>Γ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_{2,\Gamma}</annotation></semantics></math>. To the extent that this is true, it looks like an argument that could demonstrate confinement in non-abelian 4d gauge theory.</p>
+
+<p>This approach is suggested in <a href="#AtiyahWitten01">Atiyah-Witten 01, pages 84-85</a>. An argument that this equivalence is indeed the case is then provided in sections 6.1-6.4.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -1218,7 +1263,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 01:46:15.
+  Last revised on September 20, 2018 at 02:50:39.
   See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
